--- a/TournamentManager.Web/Shared/NavMenu.razor
+++ b/TournamentManager.Web/Shared/NavMenu.razor
@@ -14,6 +14,17 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/settings/gametypes" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Game Types
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/settings/seasons" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Seasons
+            </NavLink>
+        </div>
     </nav>
 </div>
 
