--- a/TournamentManager.Web/Shared/NavMenu.razor
+++ b/TournamentManager.Web/Shared/NavMenu.razor
@@ -25,6 +25,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Seasons
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/settings/venues" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Venues
+            </NavLink>
+        </div>
     </nav>
 </div>
 
