--- a/TournamentManager.Web/Shared/NavMenu.razor
+++ b/TournamentManager.Web/Shared/NavMenu.razor
@@ -20,11 +20,19 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Game Types
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/settings/players" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Players
+            </NavLink>
+        </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/settings/seasons" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Seasons
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/settings/venues" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Venues
