--- a/TournamentManager.Web/Shared/NavMenu.razor
+++ b/TournamentManager.Web/Shared/NavMenu.razor
@@ -16,6 +16,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/settings/games" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Games
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/settings/gametypes" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Game Types
             </NavLink>
