When creating a game, the save operation navigates to the season the game was created for.

--- a/TournamentManager.Web/Pages/Settings/Games/Index.razor
+++ b/TournamentManager.Web/Pages/Settings/Games/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/settings/games/"
+@page "/settings/games/season/{SelectedSeasonId:guid}"
 @inherits PokerBaseComponent
 
 <PageTitle>Settings - Games</PageTitle>
