I wanted to set some default values like season and game type on new games. It was easy for seasons as we just set the newest season or none but I only wanted one game type to be default. Added a property called IsDefault to GameType and set a unique constraint. Migrated, added seed data, tests and validation all updated.

--- a/TournamentManager.Web/Pages/Settings/GameTypes/Index.razor
+++ b/TournamentManager.Web/Pages/Settings/GameTypes/Index.razor
@@ -11,6 +11,7 @@
             <DataGridCommandColumn />
             <DataGridColumn Field="@nameof(GameType.GameTypeName)" Caption="Game Type" />
             <DataGridColumn Field="@nameof(GameType.AwardPoints)" Caption="Award Points" />
+            <DataGridColumn Field="@nameof(GameType.IsDefault)" Caption="Default Type?" />
         </DataGridColumns>
         <ButtonRowTemplate>
             <Button Color="Color.Primary" Clicked="CreateNew">New</Button>
