--- a/TournamentManager.Web/Pages/Settings/GameTypes/GameTypeForm.razor
+++ b/TournamentManager.Web/Pages/Settings/GameTypes/GameTypeForm.razor
@@ -21,6 +21,13 @@
             </div>
         </div>
 
+        <div class="row mb-3 d-flex align-items-center">
+            <label for="isdefault" class="col-sm-2 col-form-label">Default Type?</label>
+            <div class="col-md-4">
+                <InputCheckbox id="isdefault" class="form-check-input" @bind-Value="GameType.IsDefault" />
+            </div>
+        </div>
+
         <button class="btn btn-primary" type="submit">Save</button>
         <button class="btn btn-secondary" type="button" @onclick="OnCancel">Back</button>
     </EditForm>
