Point Structures added to the point of creating CRUD. Everything season orientated updated too.

--- a/TournamentManager.Web/Pages/Settings/Seasons/Create.razor
+++ b/TournamentManager.Web/Pages/Settings/Seasons/Create.razor
@@ -8,5 +8,5 @@
 <h3>Create</h3>
 
 <CascadingValue Value="Season">
-    <SeasonForm OnSubmit="OnSubmit" OnCancel="OnCancel" />
+    <SeasonForm OnSubmit="OnSubmit" OnCancel="OnCancel" PointStructures="PointStructures" />
 </CascadingValue>
