--- a/TournamentManager.Web/Pages/Settings/Seasons/Edit.razor
+++ b/TournamentManager.Web/Pages/Settings/Seasons/Edit.razor
@@ -9,6 +9,6 @@
 
 <LoadingIndicator @bind-bind-Visible="formLoading">
     <CascadingValue Value="Season">
-        <SeasonForm OnSubmit="OnSubmit" OnCancel="OnCancel" />
+        <SeasonForm OnSubmit="OnSubmit" OnCancel="OnCancel" PointStructures="PointStructures" />
     </CascadingValue>
 </LoadingIndicator>
