--- a/TournamentManager.Web/Pages/Settings/Seasons/SeasonForm.razor
+++ b/TournamentManager.Web/Pages/Settings/Seasons/SeasonForm.razor
@@ -21,6 +21,23 @@
             </div>
         </div>
 
+        <div class="row mb-3">
+            <label for="point-structure" class="col-sm-2 col-form-label">Point Structure</label>
+            <div class="col-sm-10">
+                <InputSelect class="form-control" id="poit-structure" @bind-Value="Season.PointStructureId">
+                    <option value="">Select Point Structure...</option>
+                    @if (PointStructures != null)
+                    {
+                        foreach (PointStructure pointStructure in PointStructures)
+                        {
+                            <option value="@pointStructure.Id">@pointStructure.PointStructureDescription</option>
+                        }
+                    }
+                </InputSelect>
+                <ValidationMessage For="() => Season.PointStructureId" />
+            </div>
+        </div>
+
         <button class="btn btn-primary" type="submit">Save</button>
         <button class="btn btn-secondary" type="button" @onclick="OnCancel">Back</button>
     </EditForm>
@@ -35,4 +52,7 @@
 
     [Parameter]
     public EventCallback OnCancel { get; set; }
+
+    [Parameter]
+    public IEnumerable<PointStructure>? PointStructures { get; set; }
 }
