--- a/TournamentManager.Web/Shared/NavMenu.razor
+++ b/TournamentManager.Web/Shared/NavMenu.razor
@@ -34,6 +34,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/settings/pointstructures" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Point Structures
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/settings/seasons" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Seasons
             </NavLink>
