--- a/TournamentManager.Web/Pages/Settings/PointStructures/PointStructureForm.razor
+++ b/TournamentManager.Web/Pages/Settings/PointStructures/PointStructureForm.razor
@@ -7,6 +7,7 @@
 {
     <EditForm Model="PointStructure" OnValidSubmit="OnSubmit">
         <FluentValidationValidator />
+        <Microsoft.AspNetCore.Components.Forms.ValidationSummary />
 
         <div class="row mb-3">
             <label for="point-structure-description" class="col-sm-2 col-form-label">Description</label>
