Renamed IPoints to IPosition and it's associated implentaion. It checks positions, not points.

--- a/TournamentManager.Web/Pages/Settings/PointStructures/PointStructureForm.razor
+++ b/TournamentManager.Web/Pages/Settings/PointStructures/PointStructureForm.razor
@@ -111,7 +111,7 @@
 
 @code {
     [Inject]
-    IPoints _points { get; set; } = default!;
+    IPosition _points { get; set; } = default!;
 
     [CascadingParameter]
     PointStructure? PointStructure { get; set; }
