--- a/TournamentManager.Web/Pages/Settings/Games/Edit.razor
+++ b/TournamentManager.Web/Pages/Settings/Games/Edit.razor
@@ -9,6 +9,6 @@
 
 <LoadingIndicator @bind-bind-Visible="formLoading">
     <CascadingValue Value="Game">
-        <GameForm OnSubmit="OnSubmit" OnCancel="OnCancel" GameTypes="GameTypes" Venues="Venues" Seasons="Seasons" Players="Players" OnPlayerChanged="OnPlayerChanged" />
+        <GameForm OnSubmit="OnSubmit" OnCancel="OnCancel" GameTypes="GameTypes" Venues="Venues" Seasons="Seasons" Players="Players" />
     </CascadingValue>
 </LoadingIndicator>
