Results add and remove ok and as expected.
There are a few edge cases that need work:

1. Better validation when entering results so that you cannot add the same player to the results more than once.

2. See GameController.cs Line 107 and my note. I don't see why we should need to do this. Maybe we have to use a DTO? I'm not sure.

--- a/TournamentManager.Web/Pages/Settings/Games/GameForm.razor
+++ b/TournamentManager.Web/Pages/Settings/Games/GameForm.razor
@@ -122,6 +122,8 @@
     </div>
 
     <EditForm Model="result" OnValidSubmit="AddResult">
+        <FluentValidationValidator />
+
         <div class="row" style="margin-bottom:10px;">
             <div class="col-2">
                 <label for="position" class="form-label">Position</label>
@@ -140,12 +142,13 @@
                         }
                     }
                 </InputSelect>
-                <ValidationMessage For="() => Game.VenueId" />
+                <ValidationMessage For="() => result.PlayerId" />
             </div>
 
             <div class="col-2">
                 <label for="cash" class="form-label">Cash</label>
                 <InputNumber class="form-control" id="cash" @bind-Value="result.Cash" />
+                <ValidationMessage For="() => result.Cash" />
             </div>
 
             <div class="col-1">
@@ -172,7 +175,7 @@
                     {
                         <tr>
                             <td>@result.Position</td>
-                            <td>@result.Player.FirstName @result.Player.LastName</td>
+                            <td>@result.Player!.FirstName @result.Player!.LastName</td>
                             <td>@result.Points</td>
                             <td>@result.Cash</td>
                             <td><button class="btn btn-sm btn-danger" @onclick="() => RemoveResult(result)" type="button">Remove</button></td>
